# YUViz

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_shaders.bat
.github/: README.md
.github/workflows/: cd.yml  ci.yml
src/: main.cpp  mywindow.cpp  mywindow.h
src/controller/: compareController.cpp  compareController.h  frameController.cpp  frameController.h  playBackWorker.cpp  playBackWorker.h  timer.cpp  timer.h  videoController.cpp  videoController.h
src/decoder/: videoDecoder.cpp  videoDecoder.h
src/frames/: frameController.cpp  frameController.h  frameData.cpp  frameData.h  frameMeta.cpp  frameMeta.h  frameQueue.cpp  frameQueue.h  yuvUtils.h
src/icons/: app_icon.rc  icon.icns  icons.qrc
src/qml/: AboutPage.qml  CommandsPopup.qml  DiffPane.qml  DiffWindow.qml  ImportPopup.qml  JumpToFramePopup.qml  MismatchWarningPopup.qml  ResolutionWarningPopup.qml  Theme.qml  VideoWindow.qml  main.qml  qml.qrc
src/readers/: frameReader.h  yuvReader.cpp  yuvReader.h
src/rendering/: diffRenderNode.cpp  diffRenderNode.h  diffRenderer.cpp  diffRenderer.h  videoRenderNode.cpp  videoRenderNode.h  videoRenderer.cpp  videoRenderer.h
src/shaders/: fragment-diff.frag  fragment.frag  fragment.qsb  vertex.qsb  vertex.vert
src/ui/: diffWindow.cpp  diffWindow.h  mywindow.cpp  mywindow.h  videoLoader.cpp  videoLoader.h  videoWindow.cpp  videoWindow.h
src/utils/: aboutHelper.h  aboutHelper.mm  aboutHelper_stub.cpp  aboutHelper_win.cpp  appConfig.h  compareHelper.cpp  compareHelper.h  debugManager.cpp  debugManager.h  errorReporter.cpp  errorReporter.h  psnrResult.h  sharedViewProperties.cpp  sharedViewProperties.h  videoFileInfo.h  videoFormatUtils.cpp  videoFormatUtils.h  y4mParser.cpp  y4mParser.h
test/: CMakeLists.txt  README.md  coverage_config.h  run_tests.sh  test_main.cpp
test/controller/: compareControllerTest.cpp  compareControllerTest.h  frameControllerTest.cpp  frameControllerTest.h  test_comparecontroller.cpp  test_framecontroller.cpp  test_videocontroller.cpp  timerTest.cpp  timerTest.h  videoControllerTest.cpp  videoControllerTest.h
test/decoder/: test_videodecoder.cpp  videoDecoderTest.cpp  videoDecoderTest.h
test/frames/: frameDataTest.cpp  frameDataTest.h  frameMetaTest.cpp  frameMetaTest.h  frameQueueTest.cpp  frameQueueTest.h  test_framedata.cpp  test_framemeta.cpp  test_framequeue.cpp
test/mock/: mock_decoder.h  mock_renderer.h
test/rendering/: diffRendererTest.cpp  diffRendererTest.h  test_diffrenderer.cpp  test_diffrendernode.cpp  test_videorenderer.cpp  test_videorendernode.cpp  videoRendererTest.cpp  videoRendererTest.h
test/resources/: test_stub.y4m  test_stub.yuv  test_stub_nv12.yuv  test_stub_nv21.yuv  test_stub_uyvy422.yuv  test_stub_yuyv422.yuv
test/ui/: test_diffwindow.cpp  test_videowindow.cpp  videoLoaderTest.cpp  videoLoaderTest.h  videoWindowTest.cpp  videoWindowTest.h
test/utils/: appConfigTest.cpp  appConfigTest.h  compareHelperTest.cpp  compareHelperTest.h  errorReporterTest.cpp  errorReporterTest.h  psnrResultTest.cpp  psnrResultTest.h  sharedViewPropertiesTest.cpp  test_comparehelper.cpp  test_debugmanager.cpp  test_errorreporter.cpp  test_sharedviewproperties.cpp  test_videoformatutils.cpp  test_y4mparser.cpp  videoFileInfoTest.cpp  videoFileInfoTest.h
